--- a/rdr_service/offline.yaml
+++ b/rdr_service/offline.yaml
@@ -7,7 +7,7 @@ entrypoint: gunicorn -c rdr_service/services/gunicorn_config.py --timeout 18000 
 # Default AppEngine configuration (B1) has only 128 MB of RAM and 600 MhZ CPU, which makes
 # the metrics pipeline run very slowly. Bumping up to 1 GB of RAM and 2.4 GHz to speed things up.
 # https://cloud.google.com/appengine/docs/standard/
-instance_class: B4
+instance_class: F4_1G
 # We need to specify basic scaling in order to use a backend instance class.
 basic_scaling:
   max_instances: 10
