--- a/rdr_service/cron_prod.yaml
+++ b/rdr_service/cron_prod.yaml
@@ -1,7 +1,7 @@
 cron:
 - description: Validate the previous day's consent files
   url: /offline/ValidateConsentFiles
-  schedule: every day 02:00
+  schedule: every 1 hours
   timezone: America/New_York
   target: offline
 - description: Check for any corrections to invalid consent files
