running consent validation cron job on all environments

--- a/rdr_service/cron_default.yaml
+++ b/rdr_service/cron_default.yaml
@@ -264,4 +264,9 @@ cron:
   timezone: America/New_York
   schedule: every day 04:30
   target: offline
+- description: Validate the consent files
+  url: /offline/ValidateConsentFiles
+  schedule: every 1 hours
+  timezone: America/New_York
+  target: offline
 
