--- a/rdr_service/cron_prod.yaml
+++ b/rdr_service/cron_prod.yaml
@@ -114,3 +114,13 @@ cron:
   timezone: America/New_York
   schedule: every day 22:15
   target: offline
+- description: NPH Biobank Nightly File Drop (Daily)
+  schedule: every day 05:30
+  target: offline
+  timezone: America/New_York
+  url: /offline/NphBiobankNightlyFileDrop
+- description: NPH Biobank Nightly Inventory File Import (Daily)
+  schedule: every day 06:00
+  target: offline
+  timezone: America/New_York
+  url: /offline/NphBiobankInventoryFileImport
