--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ commands:
           name: Check Licenses
           command : |
             export PYTHONPATH=$PYTHONPATH:`pwd`
-            python3.7 ./ci/check_licenses.py --root ./venv/lib/python3.7/site-packages \
+            python ./ci/check_licenses.py --root ./venv/lib/python3.11/site-packages \
                             --licenses_file ci/license_allowed_list.txt --exceptions_file ci/license_exceptions.txt
       - run:
           name: Launch Flask Unittest Service
