--- a/requirements_base.txt
+++ b/requirements_base.txt
@@ -95,6 +95,7 @@ simple-geometry==0.1.4  # geometry
 simplejson==3.17.0        # via -r requirements.in
 six==1.15.0               # via astroid, cryptography, flask-restful, geventhttpclient, google-api-core, google-api-python-client, google-auth, google-cloud-bigquery, google-python-cloud-debugger, google-resumable-media, grpcio, isodate, jira, oauth2client, packaging, pip-tools, protobuf, protorpc, pyopenssl, python-dateutil
 snowballstemmer==2.0.0    # via sphinx
+sphinx==6.2.1
 sqlalchemy==1.3.17        # via -r requirements.in, alembic, dictalchemy
 sqlparse==0.4.4           # via -r requirements.in
 supervisor==4.2.0         # via -r requirements.in
