[DA-3670] Move consent error reporting to its own cron job

--- a/rdr_service/cron_prod.yaml
+++ b/rdr_service/cron_prod.yaml
@@ -129,3 +129,8 @@ cron:
   schedule: every Monday 09:00
   timezone: America/New_York
   target: offline
+- description: Daily Consent Error Report checks
+  url: /offline/ConsentErrorReport
+  schedule: every day 08:30
+  target: offline
+  timezone: America/New_York
