--- a/rdr_service/cron_prod.yaml
+++ b/rdr_service/cron_prod.yaml
@@ -124,8 +124,8 @@ cron:
   target: offline
   timezone: America/New_York
   url: /offline/NphBiobankInventoryFileImport
-- description: Weekly Biobank missing sample check
-  url: /offline/BiobankMissingSamplesCheck
+- description: Weekly Biobank overdue DNA sample check
+  url: /offline/BiobankOverdueSamplesCheck
   schedule: every Monday 09:00
   timezone: America/New_York
   target: offline
