--- a/rdr_service/cron_default.yaml
+++ b/rdr_service/cron_default.yaml
@@ -259,10 +259,15 @@ cron:
   timezone: America/New_York
   schedule: every monday 08:30
   target: offline
-- description: Genomic GCR Outreach Escalation Notification (Daily)
+- description: Genomic GCR Outreach Escalation Notification (Daily - 14 days)
   url: /offline/GenomicNotifyGCROutreachEscalation
   timezone: America/New_York
   schedule: every day 04:30
+  target: offline
+- description: Genomic GCR Outreach Escalation Notification (Daily - 30 days Only CE)
+  url: /offline/GenomicNotifyGCRCEOutreachEscalation
+  timezone: America/New_York
+  schedule: every day 05:30
   target: offline
 - description: Validate the consent files
   url: /offline/ValidateConsentFiles
