reading config for pm core data codes

--- a/rdr_service/config/base_config.json
+++ b/rdr_service/config/base_config.json
@@ -198,5 +198,7 @@
       "organization",
       "site"
     ]
-  }
+  },
+  "pm_height_codes": ["height", "8302-2"],
+  "pm_weight_codes": ["weight", "29463-7", "pre-pregnancy-weight"]
 }
