--- a/rdr_service/config/base_config.json
+++ b/rdr_service/config/base_config.json
@@ -200,5 +200,6 @@
     ]
   },
   "pm_height_codes": ["height", "8302-2"],
-  "pm_weight_codes": ["weight", "29463-7", "pre-pregnancy-weight"]
+  "pm_weight_codes": ["weight", "29463-7", "pre-pregnancy-weight"],
+  "participant_cleanup_cc_list": []
 }
