fixes for pediatric enrollment status

--- a/rdr_service/.configs/current_config.json
+++ b/rdr_service/.configs/current_config.json
@@ -38,7 +38,9 @@
     "2ED10",
     "1ED04",
     "1SAL",
-    "1SAL2"
+    "1SAL2",
+    "2ED02",
+    "2ED04"
   ],
   "native_american_race_codes": [
     "WhatRaceEthnicity_AIAN"
