--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ version: 2.1
 
 job_defaults: &job_defaults
   docker:
-    - image: cimg/base:2022.09
+    - image: cimg/base:2023.12
       environment:
         RDR_UNITTEST_SQL_SERVER_PORT: 3306
         CIRCLECI_FLAG: 1
@@ -78,6 +78,7 @@ commands:
 jobs:
   job_run_unittests:
     <<: *job_defaults
+    parallelism: 5
     steps:
       - unittest-app-steps
 
