--- a/requirements_base.txt
+++ b/requirements_base.txt
@@ -11,7 +11,7 @@ cffi==1.15.1              # via cryptography
 chardet==3.0.4            # via requests
 click==8.1.3              # via flask, pip-tools
 configargparse==1.2.3     # via locust
-coverage==6.0b1             # via -r requirements.in
+coverage==7.2.5             # via -r requirements.in
 cryptography==42.0.0       # via oauthlib, pyopenssl, requests
 defusedxml==0.6.0         # via jira
 dictalchemy3==1.0.0       # via -r requirements.in
