--- a/rdr_service/cron_prod.yaml
+++ b/rdr_service/cron_prod.yaml
@@ -134,3 +134,8 @@ cron:
   schedule: every day 08:30
   target: offline
   timezone: America/New_York
+- description: Daily Duplicate Account Check
+  url: /offline/DetectDuplicateAccounts
+  schedule: every day 20:00
+  target: offline
+  timezone: America/New_York
