--- a/rdr_service/config/base_config.json
+++ b/rdr_service/config/base_config.json
@@ -200,13 +200,5 @@
     ]
   },
   "pm_height_codes": ["height", "8302-2"],
-  "pm_weight_codes": ["weight", "29463-7", "pre-pregnancy-weight"],
-  "participant_cleanup_cc_list": [
-    "heather.fullen@vumc.org",
-    "megan.morris@vumc.org",
-    "mara.a.porter@vumc.org",
-    "kayla.marginean@vumc.org",
-    "sundos.s.masri@vumc.org",
-    "mandy.roberts@vumc.org"
-  ]
+  "pm_weight_codes": ["weight", "29463-7", "pre-pregnancy-weight"]
 }
