--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 -r requirements_base.txt
 
-mysqlclient==2.2.0        # via -r requirements.in
+mysqlclient~=1.4.6
+
+docutils~=0.19
+setuptools~=68.2.2
+pandas~=2.1.1
