--- a/rdr_service/cron_prod.yaml
+++ b/rdr_service/cron_prod.yaml
@@ -134,6 +134,11 @@ cron:
   schedule: every day 08:30
   target: offline
   timezone: America/New_York
+- description: Test Participant Cleanup Reminder
+  url: /offline/PTSCTestParticipantCleanupRequest
+  schedule: 1 of december, march, june, september, 09:00
+  target: offline
+  timezone: America/New_York
 - description: Daily Duplicate Account Check
   url: /offline/DetectDuplicateAccounts
   schedule: every day 20:00
