--- a/.safety-policy.yml
+++ b/.safety-policy.yml
@@ -20,6 +20,9 @@ security: # configuration for the `safety check` command
         67599:
             reason: pip v 24.0 installs a vulnerability
             expires: '2025-05-14'
+        70612:
+          reason: jinja2 version 3.1.4 has a vulnerability
+          expires: '2025-05-31'
     continue-on-vulnerability-error: False # Suppress non-zero exit codes when vulnerabilities are found. Enable this in pipelines and CI/CD processes if you want to pass builds that have vulnerabilities. We recommend you set this to False.
 alert: # configuration for the `safety alert` command
     security:
