--- a/rdr_service/.configs/current_config.json
+++ b/rdr_service/.configs/current_config.json
@@ -141,6 +141,9 @@
   "biobank_samples_bucket_name": [
     "app_default_bucket"
   ],
+  "hhear_bucket_name": [
+    "hhear_default_bucket"
+  ],
   "ghost_id_bucket": [
     "all-of-us-rdr-test-ghost-accounts"
   ],
