--- a/rdr_service/config/base_config.json
+++ b/rdr_service/config/base_config.json
@@ -199,6 +199,10 @@
       "site"
     ]
   },
+  "ppsc_intake_activities": ["Consent", "Survey Completion", "Profile Updates"],
+  "ppsc_intake_consent_event_types": ["Primary Consent", "Adult EHR Authorization"],
+  "ppsc_intake_survey_completion_event_types": ["The Basics"],
+  "ppsc_intake_profile_updates_event_types": ["Profile Data"],
   "pm_height_codes": ["height", "8302-2"],
   "pm_weight_codes": ["weight", "29463-7", "pre-pregnancy-weight"]
 }
