--- a/rdr_service/resource.yaml
+++ b/rdr_service/resource.yaml
@@ -4,9 +4,16 @@ runtime: python311
 service: resource
 entrypoint: gunicorn -c rdr_service/services/gunicorn_config.py --timeout 600 rdr_service.resource.main:app
 
-instance_class: B4
+# Changing to Automatic Scaling based on recommendation from Google Support
+instance_class: F4
 
-# We need to specify basic scaling in order to use a backend instance class.
-basic_scaling:
-  max_instances: 20
-  idle_timeout: 60m
+inbound_services:
+- warmup
+
+# Required for automatic scaling
+handlers:
+- url: /_ah/warmup
+  script: auto
+
+automatic_scaling:
+  min_idle_instances: 5
