--- a/rdr_service/cron_default.yaml
+++ b/rdr_service/cron_default.yaml
@@ -217,12 +217,12 @@ cron:
 - description: Genomic Calculate Informing Loop Ready Status (Weekly)
   url: /offline/CalculateInformingLoopReadyStatusWeekly
   timezone: America/New_York
-  schedule: every tuesday 10:00
+  schedule: 1 of jan 12:00
   target: offline
 - description: Genomic Calculate Informing Loop Ready Status (Daily)
   url: /offline/CalculateInformingLoopReadyStatusDaily
   timezone: America/New_York
-  schedule: every day 10:00
+  schedule: 1 of jan 12:00
   target: offline
 - description: Genomic Reconcile PGX Results (Daily)
   url: /offline/GenomicReconcilePGXResults
