--- a/rdr_service/cron_prod.yaml
+++ b/rdr_service/cron_prod.yaml
@@ -149,3 +149,8 @@ cron:
   target: offline
   timezone: America/New_York
   url: /offline/detect_etm_response_duplicates
+- description: Monthly withdrawal report
+  url: /offline/BiobankWithdrawalReport
+  schedule: 1 of month 07:00
+  timezone: America/New_York
+  target: offline
