--- a/rdr_service/cron_default.yaml
+++ b/rdr_service/cron_default.yaml
@@ -144,7 +144,7 @@ cron:
   timezone: America/New_York
   schedule: every monday 05:00
   target: offline
-- description: Genomic CVL W3SR Workflow (bi-weekly runs)
+- description: Genomic CVL W3SR Workflow
   url: /offline/GenomicCVLW3SRWorkflow
   timezone: America/New_York
   schedule: every monday 05:30
