fix for cron scheduling syntax

--- a/rdr_service/cron_prod.yaml
+++ b/rdr_service/cron_prod.yaml
@@ -136,7 +136,7 @@ cron:
   timezone: America/New_York
 - description: Test Participant Cleanup Reminder
   url: /offline/PTSCTestParticipantCleanupRequest
-  schedule: 1 of december, march, june, september, 09:00
+  schedule: 1 of december, march, june, september 09:00
   target: offline
   timezone: America/New_York
 - description: Daily Duplicate Account Check
