adding cron scaffold

--- a/rdr_service/cron_default.yaml
+++ b/rdr_service/cron_default.yaml
@@ -239,3 +239,24 @@ cron:
   schedule: 1 of jan 12:00
   timezone: America/New_York
   target: offline
+- description: PPSC Data Transfer (Core Data)
+  url: /offline/PPSCDataTransferCore
+  schedule: every day 10:00
+  timezone: America/New_York
+  target: offline
+- description: PPSC Data Transfer (Health Data Stream)
+  url: /offline/PPSCDataTransferHealth
+  schedule: every day 10:10
+  timezone: America/New_York
+  target: offline
+- description: PPSC Data Transfer (Biobank Sample Received)
+  url: /offline/PPSCDataTransferBiobank
+  schedule: every day 10:20
+  timezone: America/New_York
+  target: offline
+- description: PPSC Data Transfer (EHR Receipt)
+  url: /offline/PPSCDataTransferEHR
+  schedule: every day 10:30
+  timezone: America/New_York
+  target: offline
+
